add donate button

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 <img class="lookslikekirby" src="/assets/images/coolkindalikekirby.png">
 
 <h1 class="t1">DATA</h1><h1 class="t2">vegetables</h1>
-<Player />
+<Player>
+  <DjDonateButton />
+</Player>
 <NetworkStatus as |status|>
   <Chat @networkStatus={{status}} />
 </NetworkStatus>
