--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,10 @@
+$green:  #5fdc82;
+$yellow: #fff94f;
+$pink: #e992ff;
+$blue:  #00b4ff;
+
+@import 'rainbow_barf';
+
 @keyframes wiggle3 {
   from {
     transform: rotate(0deg);
@@ -166,3 +173,242 @@ body.manga-relay {
 body.drawing-game {
   background: green;
 }
+
+#chat-area {
+  color: yellow;
+  font-weight: bold;
+  text-shadow: #333 1px 1px 1px;
+}
+
+#messages {
+  width: 100vw;
+  margin:0;
+  border-right: 1px white solid;
+  @media only screen and (max-device-width: 480px) {
+    border-right: none !important;
+  }
+}
+
+#messages-area {
+  //height: 100%;
+}
+
+#userlist {
+  width: 20vw;
+  @media only screen and (max-device-width: 480px) {
+    display: none;
+  }
+}
+
+li.userlist-item {
+}
+
+input#input-message {
+  width: 80%;
+}
+
+.message-timestamp {
+  padding-right: 10px;
+  text-align: right;
+}
+
+.username {
+  font-weight: 700;
+  overflow: hidden;
+  padding-right: 15px;
+  text-align: right;
+}
+ul {
+  list-style:none;
+  word-wrap:break-word;
+}
+
+input {
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border linear .2s, box-shadow linear .2s;
+  -moz-transition: border linear .2s, box-shadow linear .2s;
+  -o-transition: border linear .2s, box-shadow linear .2s;
+  transition: border linear .2s, box-shadow linear .2s;
+  color: black;
+  padding: 5px;
+  vertical-align: middle;
+}
+
+.cool-button {
+  font-size: 18px;
+  background-color: $blue;
+  border: 1px solid white;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  line-height: 1;
+  padding: 5px;
+  text-decoration: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition: all 0.10s ease-in-out;
+
+  &:hover,
+  &:focus {
+    background-color: darken($blue, 15%);
+    border: 1px solid darken(white, 15%);
+    color: #fff;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
+
+.small-cool-button {
+  background-color: $green;
+  border: 1px solid white;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  line-height: 1;
+  padding: 0.75em 1em;
+  text-decoration: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+
+  &:hover,
+  &:focus {
+    background-color: darken($green, 15%);
+    border: 1px solid darken(white, 15%);
+    color: #fff;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
+
+img.emojione {
+  height: 3ex !important;
+}
+
+//chat autofill emoji and username picker
+.dropdown-menu {
+  background-color: $pink;
+  border-radius:14px;
+  border: 8px dotted $green;
+  overflow: scroll;
+}
+
+a {
+  color: $yellow;
+}
+
+a:hover {
+  color: darken($yellow, 20%);
+}
+
+#chat-room {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  height: 350px;
+  background: #660066;
+  #chat-area {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    min-height: 0; //ff hack? https://bugzilla.mozilla.org/show_bug.cgi?id=1043520 https://bugzilla.mozilla.org/show_bug.cgi?id=570036
+    #messages {
+      overflow-y: scroll;
+      flex-grow: 3;
+      img {
+        max-width: 95%;
+        max-height: 95%;
+      }
+    }
+    #userlist {
+      overflow-y: scroll;
+      flex-grow: 1;
+    }
+    #new-messages-below {
+      position: absolute;
+      bottom: 0;
+      color: white;
+      font-size: 14px;
+      background: rgba(170, 170, 170, 0.79);
+      left: 0;
+      width: 100%;
+    }
+    #offline {
+      position: absolute;
+      top: 0;
+      color: white;
+      font-size: 14px;
+      background: rgba(170, 170, 170, 0.79);
+      left: 0;
+      width: 100%;
+    }
+  }
+}
+#controls {
+  flex: 2;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 768px) {
+    flex: 1;
+  }
+}
+
+.player-loading {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 3px solid rgba(255,255,0,.3);
+  border-radius: 50%;
+  border-top-color: yellow;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+.donate-button {
+  font-size: 18px;
+  background-color: $green;
+  border: 1px solid white;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  line-height: 1;
+  padding: 5px;
+  margin-right: 20px;
+  text-decoration: none;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition: all 0.10s ease-in-out;
+
+  &:hover,
+  &:focus {
+    background-color: darken($green, 15%);
+    border: 1px solid darken(white, 15%);
+    color: #fff;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
+
