--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,15 @@ $blue:  #00b4ff;
   }
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 body {
   background: salmon;
 }
@@ -372,9 +381,9 @@ a:hover {
 
 .player-loading {
   display: inline-block;
-  width: 15px;
-  height: 15px;
-  border: 3px solid rgba(255,255,0,.3);
+  width: 3rem;
+  height: 3rem;
+  border: 0.5rem solid rgba(255,255,0,.3);
   border-radius: 50%;
   border-top-color: yellow;
   animation: spin 1s ease-in-out infinite;
