add other pages

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,35 +1,1 @@
-<img class="lookslikekirby" src="/assets/images/coolkindalikekirby.png">
-
-<h1 class="t1">DATA</h1><h1 class="t2">vegetables</h1>
-<Player>
-  <DjDonateButton />
-</Player>
-<NetworkStatus as |status|>
-  <Chat @networkStatus={{status}} />
-</NetworkStatus>
-
-<p>are you lost ? site guide:</p>
-<ul>
-  <li><a href="/vol01.html">data vegetables cassette tape vol. 01</a></li>
-  <li><a href="/datazone.html">my datazone</a></li>
-  <li><a href="/dieing.html">dieing</a></li>
-  <li><a href="/memories_of_onsen.html">memories of onsen</a></li>
-  <li><a href="/no_talk.html">therapy zone</a></li>
-  <li><a href="/world_wide_wow.html">the world wide web</a></li>
-  <li><a href="/kindofadirtychineserestaurant.html">kind of a dirty chinese restaurant</a></li>
-  <li><a href="/timestrangers.html">time strangers zine</a></li>
-  <li><a href="/manga_relay.html">relay comic</a></li>
-</ul>
-
-<h1>Shop</h1>
-<img src="/assets/images/SALE.gif">
-<img src="/assets/images/SALE.gif">
-<img src="/assets/images/SALE.gif">
-<span>maybe cola - 80 yen</span>
-<img src="/assets/images/fallingcolas.gif">
-<br>
-<h3>THAT'S SO CHEAP WOW</h3>
-<img src="/assets/images/burger_die.gif">
-<br>
-<p>hurry the sale will end soon</p>
-<img src="/assets/images/pizzacube.gif">
+{{outlet}}
