fix images on vol01

--- a/app/templates/vol01.hbs
+++ b/app/templates/vol01.hbs
@@ -1,45 +1,45 @@
 <div class="container">
   <center>
-    <img src="/images/breakmachine1.png">
+    <img src="/assets/images/breakmachine1.png">
     <br/>
     <iframe scrolling="no" id="hearthis_at_track_787449" width="100%" height="150" src="https://hearthis.at/embed/787449/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=2&background=1&waveform=0&cover=0&autoplay=1&css=" frameborder="0" allowtransparency></iframe><div style="clear: both; height: 4px; width: 100%;"></div><p style="display: block; font-size: 11px; font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 3px 4px; color: 888; width: 100%;"><a href="https://hearthis.at/v48zqgjd/datavegetablesvol1demo/" target="_blank" style="color:#777; font-weight:bold;">data vegetables vol1 - side a freedrull</a><span> by </span><a href="https://hearthis.at/v48zqgjd/" target="_blank" style="color:#777; font-weight:bold;">datafruits</a><span> on </span><a href="https://hearthis.at/" target="_blank" style="color:#777; font-weight:bold;"> hearthis.at</a></p><div style="clear: both; height: 5px; width: 100%px;"></div>
     <br/>
     <div class="buy-wrapper">
       <a class="gumroad-button" href="https://gum.co/dataveggies01">BUY THIS TAPE</a>
     </div>
-    <img src="/images/breakmachine2.png">
+    <img src="/assets/images/breakmachine2.png">
     <br/>
     <iframe scrolling="no" id="hearthis_at_track_787448" width="100%" height="150" src="https://hearthis.at/embed/787448/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=2&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency></iframe><div style="clear: both; height: 4px; width: 100%;"></div><p style="display: block; font-size: 11px; font-family: Helvetica, Arial, sans-serif; margin: 0px; padding: 3px 4px; color: 888; width: 100%;"><a href="https://hearthis.at/v48zqgjd/data-vegetables-vol1-side-b-ovenrake/" target="_blank" style="color:#777; font-weight:bold;">data vegetables vol1 - side b ovenrake</a><span> by </span><a href="https://hearthis.at/v48zqgjd/" target="_blank" style="color:#777; font-weight:bold;">datafruits</a><span> on </span><a href="https://hearthis.at/" target="_blank" style="color:#777; font-weight:bold;"> hearthis.at</a></p><div style="clear: both; height: 5px; width: 100%px;"></div>
     <div class="buy-wrapper">
       <a class="gumroad-button" href="https://gum.co/dataveggies01">BUY THIS TAPE</a>
     </div>
     <marquee>d a t a v e g e t a b l e s</marquee>
-    <img src="/images/kamataonsen.gif">
+    <img src="/assets/images/kamataonsen.gif">
     <marquee>d a t a v e g e t a b l e s</marquee>
     <br/>
-    <img src="/images/mediaservice.gif">
+    <img src="/assets/images/mediaservice.gif">
     <br/>
-    <img src="/images/kamataonsen.gif">
+    <img src="/assets/images/kamataonsen.gif">
     <br/>
-    <img src="/images/mediaservice.gif">
+    <img src="/assets/images/mediaservice.gif">
     <marquee>d a t a v e g e t a b l e s</marquee>
     <br/>
-    <img src="/images/kamataonsen.gif">
+    <img src="/assets/images/kamataonsen.gif">
     <br/>
-    <img src="/images/mediaservice.gif">
+    <img src="/assets/images/mediaservice.gif">
     <br/>
-    <img src="/images/kamataonsen.gif">
+    <img src="/assets/images/kamataonsen.gif">
     <br/>
-    <img src="/images/mediaservice.gif">
+    <img src="/assets/images/mediaservice.gif">
     <br/>
-    <img src="/images/eggsaladsandwich.png">
+    <img src="/assets/images/eggsaladsandwich.png">
     <br/>
-    <img src="/images/eggplant.png">
-    <img src="/images/eggplant2.png">
-    <img src="/images/eggplant.png">
-    <img src="/images/eggplant2.png">
-    <img src="/images/eggplant.png">
-    <img src="/images/eggplant2.png">
+    <img src="/assets/images/eggplant.png">
+    <img src="/assets/images/eggplant2.png">
+    <img src="/assets/images/eggplant.png">
+    <img src="/assets/images/eggplant2.png">
+    <img src="/assets/images/eggplant.png">
+    <img src="/assets/images/eggplant2.png">
     <br/>
     <marquee>d a t a v e g e t a b l e s</marquee>
     <p class="thepitch">30 minute mix on each side</p>
@@ -47,39 +47,39 @@
       <a class="gumroad-button" href="https://gum.co/dataveggies01">BUY THIS TAPE</a>
     </div>
     <br/>
-    <img src="/images/musicandvideo.jpg">
+    <img src="/assets/images/musicandvideo.jpg">
     <br/>
-    <img src="/images/kmart.jpg">
+    <img src="/assets/images/kmart.jpg">
     <br/>
-    <img src="/images/ross_gchat_vegetable.png">
+    <img src="/assets/images/ross_gchat_vegetable.png">
     <br/>
-    <img src="/images/datavegetables_testimonial_1.png">
+    <img src="/assets/images/datavegetables_testimonial_1.png">
     <br/>
-    <img src="/images/datavegetables_testimonial_2.png">
+    <img src="/assets/images/datavegetables_testimonial_2.png">
     <br/>
     <div class="buy-wrapper">
       <a class="gumroad-button" href="https://gum.co/dataveggies01">BUY THIS TAPE</a>
     </div>
     <br/>
-    <img src="/images/tape_bar.jpg">
+    <img src="/assets/images/tape_bar.jpg">
     <br/>
-    <img src="/images/tape_beer.jpg">
+    <img src="/assets/images/tape_beer.jpg">
     <br/>
-    <img src="/images/tape_breakparty.jpg">
+    <img src="/assets/images/tape_breakparty.jpg">
     <br/>
-    <img src="/images/tape_breakparty2.jpg">
+    <img src="/assets/images/tape_breakparty2.jpg">
     <br/>
-    <img src="/images/tape_curry.jpg">
+    <img src="/assets/images/tape_curry.jpg">
     <br/>
-    <img src="/images/tape_curry2.jpg">
+    <img src="/assets/images/tape_curry2.jpg">
     <br/>
-    <img src="/images/cupnoodle.jpg">
+    <img src="/assets/images/cupnoodle.jpg">
     <br/>
-    <img src="/images/tape_stax.jpg">
+    <img src="/assets/images/tape_stax.jpg">
     <br/>
-    <img src="/images/tape_sushi.jpg">
+    <img src="/assets/images/tape_sushi.jpg">
     <br/>
-    <img src="/images/tapes_merch.jpg">
+    <img src="/assets/images/tapes_merch.jpg">
     <p class="thepitch">STICKERS INCLUDED WITH EVERY ORDER!</p>
     <div class="buy-wrapper">
       <a class="gumroad-button" href="https://gum.co/dataveggies01">BUY THIS TAPE</a>
