--- a/app/templates/datazone.hbs
+++ b/app/templates/datazone.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<marquee>WELCOME TO THE DATAZONE</marquee>
+<p>
+  Hi this is where i keep all my data
+</p>
+<p>
+  its the datazone
+</p>
+<p>
+  that should be obvious to you tho
+</p>
