fix some other pages

--- a/app/templates/dieing.hbs
+++ b/app/templates/dieing.hbs
@@ -1,1 +1,14 @@
-{{outlet}}
+    <img src="/assets/images/dieing.jpg">
+    <img src="/assets/images/gazou_0071.jpg">
+    <img src="/assets/images/garfield_dead.jpg">
+    <img src="/assets/images/garf_dead_drunk.png">
+    <img src="/assets/images/garf_nokotto.jpg">
+    <p>
+      Am I dieing or am I already dead?
+    </p>
+    <img src="/assets/images/garf_dead_drunk.png">
+    <img src="/assets/images/garf_dead_drunk.png">
+    <img src="/assets/images/garf_dead_drunk.png">
+    <p>
+      Good q
+    </p>
