--- a/app/templates/kindofadirtychineserestaurant.hbs
+++ b/app/templates/kindofadirtychineserestaurant.hbs
@@ -1,1 +1,13 @@
-{{outlet}}
+<div class="container">
+  <div class="row">
+    <center>
+      <h2 class="artist">
+        ちょっとだけ
+        <br/>
+        汚い
+        <br/>
+        中華屋さん
+      </h2>
+    </center>
+  </div>
+</div>
