--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -169,7 +169,7 @@ text-shadow: -1px -1px hsl(0,100%,50%), 1px 1px hsl(5.4, 100%, 50%), 3px 2px hsl
 
 }
 
-body.chinese-restaurant {
+body.kindofadirtychineserestaurant {
   background: black;
   background-image: none;
 }
