fix other templates

--- a/app/templates/manga-relay.hbs
+++ b/app/templates/manga-relay.hbs
@@ -1,1 +1,14 @@
-{{outlet}}
+<img src="/assets/images/manga_relay/12022017_finished.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/12112017.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/comic_12022017.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/comic_12022017_markversion.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/finishedmaybe.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/oshienai_ishi.jpg" />
+<br/>
+<img src="/assets/images/manga_relay/oshienai_ishi_2.jpg" />
+<br/>
