--- a/app/templates/timestrangers.hbs
+++ b/app/templates/timestrangers.hbs
@@ -1,1 +1,33 @@
-{{outlet}}
+<div class="container">
+  <div class="row">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/DZJBwrWzYkg?rel=0" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="row">
+    <img src="/assets/images/timestrangers/time_strangers_colors.jpg" />
+    <img src="/assets/images/timestrangers/time_strangers_cover.jpg" />
+  </div>
+  <div class="row">
+    <a class="gumroad-button" href="https://gum.co/rmpjb" target="_blank">buy zine</a>
+  </div>
+  <div class='row'>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/b19sA8lfJ64?rel=0" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="row">
+    <img src="/assets/images/timestrangers/time_strangers_1.jpg" />
+    <img src="/assets/images/timestrangers/time_strangers_2.jpg" />
+  </div>
+  <div class="row">
+    <a class="gumroad-button" href="https://gum.co/rmpjb" target="_blank">buy zine</a>
+  </div>
+  <div class='row'>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/E8aDNm3lFuk?rel=0" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="row">
+    <img src="/assets/images/timestrangers/time_strangers_3.jpg" />
+    <img src="/assets/images/timestrangers/time_strangers_4.jpg" />
+  </div>
+  <div class="row">
+    <a class="gumroad-button" href="https://gum.co/rmpjb" target="_blank">buy zine</a>
+  </div>
+</div>
+
