--- a/app/templates/no-talk.hbs
+++ b/app/templates/no-talk.hbs
@@ -1,6 +1,8 @@
 
 <h4>Who do not want to talk as well. I do not want involved. I do not want to meet. But, there is no escape there is also work and socializing. Do not you feel that?</h4>
 
+<img src="https://media.giphy.com/media/MDrva6iRDwHmzs8gyr/giphy.gif" >
+
 <p>
 The reason I think that there is a variety to each of its people, but if accumulated stress in that you are in such a state, we need to improve if the is a pain.
 </p>
@@ -20,6 +22,8 @@ Face While can face
 
 <h1>Try Internet search</h1> for "I do not want to talk to anyone." The majority of the search results is the article about depression.
 
+<img src="https://media.giphy.com/media/Kenl4GecjPOgYxiQ4Y/giphy.gif" >
+<p>
 Feeling that I do not want to talk with anyone is immediately, directly linked to depression. It does not mean that, but there is a possibility to come related matters. Is the point that should be considered in the sense that.
 
 Since it has become also need help of time and people in recovery, it is becoming difficult to think becomes when it comes to depressive symptoms in a state where the unconscious region of the brain stops functioning, opposite the one that can face the cause before this does not happen it try it is important.
@@ -27,9 +31,11 @@ Since it has become also need help of time and people in recovery, it is becomin
 However, there is no need to think deeply deeply stuffed with roots. Try to try to ask to lightly himself as "Why wonder if had thought that way." "I wonder What things that caused?".
 
 If the cause of the hit is found is the improvement to a step forward just it. Also, stop to think immediately if you feel Do not thoughtful, at a time performs a diversion let's run repeatedly to try to approach again.
+</p>
+<img src="https://media.giphy.com/media/Kenl4GecjPOgYxiQ4Y/giphy.gif" >
 
  
-
+<p>
 And the people that horse is fit, rise in the story that fits
 
 Person everyone people that horse is fit, we have do not fit a person is. To improve the feeling that I do not want to talk to drastic is the best way is possible to eliminate stress by talking to people.
@@ -73,11 +79,15 @@ Take advantage of, such as the Internet is also effective, but it is also import
 It is such as the greeting at the first meeting is the basic communication, or feel the freshness that reminds me of the basics, you will be able to reflect on their own until now.
 
 In was if long-lasting is a fine, but it does not have to be long-lasting. If the cost to the preparation it takes is you need to consider the cost, but it does not cause the only chemical reaction by interest experience. It is important to try to go to aggressively.
+</p>
 
  
 
-To respect yourself you do not want to talk
+<h1>To respect yourself you do not want to talk</h1>
+<img src="https://media.giphy.com/media/f3qMl9IIPUvo2srYYV/giphy.gif" >
+<img src="https://media.giphy.com/media/f3qMl9IIPUvo2srYYV/giphy.gif" >
 
+<p>
 Who not only kill and press the feeling that I do not want to talk as well, perhaps even better try to respect. However, care must be taken so different from the thing you do not face each other and that the cause of respect.
 
 In addition, it is also important to be aware of the fact that the other party is present is to communicate with people.
@@ -85,6 +95,8 @@ In addition, it is also important to be aware of the fact that the other party i
 To show the "attitude that I do not want to talk" in a scene, such as placing a worry to a colleague of the family and the company does not could lead to malfunction of communication. Let's find a way to take advantage of one of the time.
 
 For example, on a business trip at the time thinking about work or the way home I not go home and so spend in hotels alone. Facing honest and feeling, early in that try to find a way Let's strive to move away from such a feeling.
+</p>
 
 <br />
 <img src="/assets/images/mothersday_lobster.jpg">
+<img src="https://media.giphy.com/media/jRGw1xJkw59M6XDltE/giphy.gif" >
