--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -22,6 +22,8 @@
   <li><LinkTo @route="manga-relay">relay comic</LinkTo></li>
 </ul>
 
+<h1><a href="https://cool-websites.glitch.me/" target="_blank">C00L WEBRING HERE</a></h1>
+
 <h1>Shop</h1>
 <img src="/assets/images/SALE.gif">
 <img src="/assets/images/SALE.gif">
